# AdventOfCode2024

./: Cargo.toml
src/: day01.rs  day02.rs
