[package]
name = "advent2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version ="4.5.21", features = ["cargo"]}
itertools = "0.13.0"
num = "0.4.3"
rangemap = "1.5.1"
rayon = "1.10.0"
rust_decimal = "1.36.0"
